elk/kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
  name: traefik-ingress-pathprefix
spec:
  rules:
    - {}
    - http:
        paths:
          - backend:
              service:
                name: rd-kibana
                port:
                  number: 5601
            path: /kibana
            pathType: Prefix
status:
  loadBalancer: {}
